fixed z-index of navbar

--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ p {
   display: flex;
   justify-content: center;
   align-items: center;
+  z-index: 99;
 }
 
 .navbar a {
